@@ -36,19 +36,6 @@ void f2(T a) noexcept (noexcept (f (a)))
 
 struct A { A() { } };		// { dg-warning "does not throw" }
 
-// throw(int) overrides noexcept(false) in either order.
-void h() throw (int, std::bad_exception);
-void h() noexcept (false)
-{
-  throw 1.0;
-}
-
-void i() noexcept (false);
-void i() throw (int, std::bad_exception)
-{
-  throw 1.0;
-}
-
 int main()
 {
   // noexcept(false) allows throw.
@@ -56,10 +43,6 @@ int main()
   // noexcept(noexcept(A())) == noexcept(false).
   try { f(A()); } catch (int) { }
   try { f2(A()); } catch (int) { }
-
-  std::set_unexpected (my_unexpected);
-  try { h(); } catch (std::bad_exception) { }
-  try { i(); } catch (std::bad_exception) { }
 
   std::set_terminate (my_terminate);
   // noexcept(noexcept(int())) == noexcept(true).
