@@ -1,5 +1,12 @@
 2011-05-20  Jason Merrill  <jason@redhat.com>
 
+	DR 1073
+	PR c++/49082
+	* typeck.c (comp_except_specs): noexcept(false) is not compatible
+	with throw(type-list).
+	* typeck2.c (merge_exception_specifiers): noexcept(false)
+	beats any more limited specification.
+
 	PR c++/48948
 	* class.c (finalize_literal_type_property): Only check
 	for constexpr member functions of non-literal class.
